[gd_scene load_steps=14 format=3 uid="uid://j8tyoq1hd1bx"]

[ext_resource type="Script" uid="uid://ckkig1tjr3e2a" path="res://scripts/MainMenu/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Shader" uid="uid://8wg2iwar8qby" path="res://shaders/pantheon_sky_stars.gdshader" id="2_ekxnf"]
[ext_resource type="FontFile" uid="uid://me757ermgvb3" path="res://assets/ui/Ithaca-LVB75.ttf" id="3_bqqt6"]
[ext_resource type="Shader" uid="uid://gnqa13nboi10" path="res://shaders/glare.gdshader" id="3_wu84c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bqqt6"]
shader = ExtResource("2_ekxnf")
shader_parameter/bg_color = Vector4(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vue75"]
bg_color = Color(0.0201693, 0.142918, 0.225508, 1)

[sub_resource type="Theme" id="Theme_l6cm7"]
Panel/styles/panel = SubResource("StyleBoxFlat_vue75")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wu84c"]
shader = ExtResource("3_wu84c")
shader_parameter/base_color = Color(0.921675, 0.767929, 1, 1)
shader_parameter/flame_color = Color(0.763553, 0.84492, 0.937124, 1)
shader_parameter/speed = 3.0
shader_parameter/noise_scale = 10.0

[sub_resource type="LabelSettings" id="LabelSettings_ekxnf"]
font_size = 27
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8ln24"]
shader = ExtResource("3_wu84c")
shader_parameter/base_color = Color(0.921675, 0.767929, 1, 1)
shader_parameter/flame_color = Color(0.763553, 0.84492, 0.937124, 1)
shader_parameter/speed = 3.0
shader_parameter/noise_scale = 10.0

[sub_resource type="Animation" id="Animation_ekxnf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(273, 159)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StartContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(101.001, 103)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ContinueContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(280, 151)]
}

[sub_resource type="Animation" id="Animation_l6cm7"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.105, 1),
"update": 0,
"values": [Vector2(273, 135), Vector2(273, 155)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StartContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.105, 1),
"update": 0,
"values": [Vector2(101.001, 83), Vector2(101.001, 103)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ContinueContainer:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.105, 1),
"update": 0,
"values": [Vector2(280, 131), Vector2(280, 151)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ContinueContainer:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bqqt6"]
_data = {
&"RESET": SubResource("Animation_ekxnf"),
&"fade_in": SubResource("Animation_l6cm7")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="Panel" type="Panel" parent="."]
material = SubResource("ShaderMaterial_bqqt6")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_l6cm7")

[node name="Label" type="Label" parent="."]
material = SubResource("ShaderMaterial_wu84c")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -271.999
offset_top = -106.5
offset_right = 272.001
offset_bottom = -69.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_bqqt6")
text = "Isekai Chronicle: Blessing of the Pantheon"
label_settings = SubResource("LabelSettings_ekxnf")
horizontal_alignment = 1
vertical_alignment = 1
language = "en_US"

[node name="StartContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.5
offset_right = 100.0
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button_Start" type="Button" parent="StartContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 28
text = "Начать игру"
language = "ru_RU"

[node name="Button_Continue" type="Button" parent="StartContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 28
text = "Продолжить"

[node name="Button_Quit" type="Button" parent="StartContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 28
text = "Выйти"

[node name="ContinueContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -58.5
offset_right = 117.0
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ContinueContainer"]
material = SubResource("ShaderMaterial_8ln24")
layout_mode = 2
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 28
text = "Выберите сохранение:"

[node name="OptionButton" type="OptionButton" parent="ContinueContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 28

[node name="Button_LoadSave" type="Button" parent="ContinueContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 28
text = "Загрузить"

[node name="Button_Back" type="Button" parent="ContinueContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 28
text = "Назад"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bqqt6")
}

[connection signal="pressed" from="StartContainer/Button_Start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="StartContainer/Button_Continue" to="." method="_on_button_continue_pressed"]
[connection signal="pressed" from="StartContainer/Button_Quit" to="." method="_on_button_quit_pressed"]
[connection signal="pressed" from="ContinueContainer/Button_LoadSave" to="." method="_on_button_load_save_pressed"]
[connection signal="pressed" from="ContinueContainer/Button_Back" to="." method="_on_button_back_pressed"]
